--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "rm-jstat",
+  "name": "jstat-shahata",
   "version": "1.0.0",
   "authors": [
     "Alexandros Marinos <alexandros@rulemotion.com>"
